# url_shorten_backend

./: .env  .gitignore  Dockerfile  README.md  appspec.yml  data.db  go.mod  go.sum  main.go
.github/workflows/: CI.yml  dockerpush.yml  go-build.yml  go.yml  trying-again.yml
Controllers/: url.go
Models/: setup.go  url.go
Routers/: routers.go
Utils/: BaseConversion.go  BaseConversion_test.go
database/: database.go
db/: db.sql
handlers/: get_link_by_id.go  link_handler.go  link_handler_test.go
models/: link.go
repositories/: link_repository.go  link_repository_test.go
routes/: routes.go
scripts/: application_stop.sh  before_install.sh  start_app.sh  stop_app.sh
server/: server.go
services/: link_service.go  link_service_test.go
static/: 404.html  analytics.html  create_link.html  msg.html
testutils/: utils.go
url_backend/: .env  Cargo.toml  go.mod  main.go  t.py
url_backend/Controllers/: Hash.go  url.go
url_backend/Models/: Hash.go  setup.go  url.go
url_backend/Routers/: Routers.go
url_backend/Utils/: BaseConversion.go  BaseConversion_test.go
url_backend/db/: setup_db.sh
url_backend/models/: link.go
url_backend/src/: main.rs
url_backend/static/: 404.html  msg.html
utils/: baseConversion.go  baseConversion_test.go
