[package]
name = "url_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
r2d2 = "0.8"
r2d2_sqlite = "0.20" # 0.21.0 blocked on sqlx sqlite update
rusqlite = "0.27" # 0.28.0 blocked on sqlx sqlite update
